--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Your TO DO List </title>
-    <link rel='stylesheet' href='style.css'>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel='stylesheet' href='style.css'>
 </head>
 <body>
     <header>
@@ -13,7 +14,7 @@
     </header>
     
     <main>
-    <div class="container"> 
+    <div class="container" id="above"> 
         <div class="row">
             <div class="col-8">
                 
