--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
 </head>
 <body>
     <header>
-            <h2>To Do List</h2>
-<!-- 
-          <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </div>
-          </nav>
- */  -->     
+        <div id="date"></div>
+          <form class="searchBar" id="search">
+                <input class="searchInput" type="search" placeholder="Search" aria-label="Search">
+                <button class="searchButton" type="submit"><i class="fas fa-search"></i></button>
+            </form>
+         <h2>To Do List</h2>
     </header>
+
         <form>
         <input id="toDoInput" type="text" placeholder="Add new item">
             <button id="add" type="submit">
